# processing

./: README.md
24/sketch_01/: sketch_01.pde
example08b/: example08b.pde
example08c/: example08c.pde
imagenes/: vyf4hmz.mov
proyecto/: Avance1.odt
proyecto/openmortal-0.7/: confdefs.h
proyecto/openmortal-0.7/data/: Makefile.in
proyecto/openmortal-0.7/data/characters/: Agent.dat.txt  Agent.pl  Ambrus.dat.txt  Ambrus.pl  Bence.pl  Cumi.pl  Dani.dat.txt  Dani.pl  Descant.pl  Grizli.pl  Jacint.dat.txt  Jacint.pl  Jozsi.dat.txt  Jozsi.pl  Judy.dat.txt  Judy.pl  Kinga.dat.txt  Kinga.pl  Macy.pl  Makefile.in  Mrsmith.dat.txt  Mrsmith.pl  Sirpi.pl  Sleepy.dat.txt  Sleepy.pl  UPi.pl  Ulmar.pl  Zoli.pl
proyecto/openmortal-0.7/data/gfx/: Makefile.am  Makefile.in  level10.desc  level4.desc
proyecto/openmortal-0.7/data/sound/: Makefile.am  Makefile.in
proyecto/openmortal-0.7/src/: main.cpp
proyecto/proyecto/: gui.pde  proyecto.pde
proyecto/proyecto/GUI_BUILDER_DATA/: gui.ser.4.2
proyecto/proyectoMK/MortalKombat/: MortalKombat.pde  Personaje.pde
proyecto/proyectoMK/MortalKombat/recursos/: Cambio.java
proyecto/proyectoMK/MortalKombat/recursos/texto/: escenarios.txt  history.txt
proyecto/sketch_170224a/: Personaje.pde  sketch_170224a.pde  userStory.docx
sketch_24_02_2/: sketch_24_02_2.pde
