## Process this file with automake to produce Makefile.in

sounddatadir	= $(pkgdatadir)/sound
sounddata_DATA	= \
2nd_pm.s3m     beepdoub.wav  cow.wav                 evilpsychola.wav  movemenu.wav  splat2.voc  thump.wav \
apert.wav      beepdrop.wav  curve.wav               hit_ground.wav    ride.mod      splat.wav   top.wav \
aroooga.voc    bowling.voc   drips.wav               honk.wav          shu.wav       swoosh.wav  ups.wav \
autostart.wav  buzzer_2.wav  endcountdown_sound.wav  laser.wav         soundmap.txt  thump3.voc  woman_screams.voc

EXTRA_DIST = $(sounddata_DATA)
